texi2html/test/invalid/res/texi_tex_not_closed/tex_not_closed.texi.first
\input texinfo @c -*-texinfo-*-

@node Top

texte

@special_tex_1{}